[tool.poetry]
name = "solana-non-linear-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ "include" = "non_linear_cli" }]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
anchorpy-fork = "^0.18.1a3"
borsh-construct = "^0.1.0"
click = "^8.1.7"
solana-fork = "^0.30.2a4"

[tool.poetry.scripts]
"non_linear_cli" = 'non_linear_cli.main:main'

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
genpy = "^2022.1"
ipython = "^8.23.0"
mypy = "^1.10.0"
pyinstaller = "^6.6.0"
ruff = "^0.4.3"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "__init__.py", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "ASYNC", "B", "COM", "C4", "PT"]
ignore = ["COM812", "D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["arweave"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
